--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,17 @@ buildscript {
         google()
         jcenter()
 
+        // To download the required version of the Kotlin-Gradle plugin,
+        // add the following repository.
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:4.0.0-alpha01'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60-eap-25'
     }
 }
 
@@ -20,6 +25,7 @@ allprojects {
         google()
         jcenter()
 
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
 }
 
